// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddTrackDrawerWidget /> adds a track 1`] = `
<div>
  <div
    class="AddTrackDrawerWidget-root-230"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiStepper-root MuiStepper-vertical AddTrackDrawerWidget-stepper-231"
    >
      <div
        class="MuiStep-root MuiStep-vertical MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
              />
            </svg>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
            >
              Enter track data
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root"
          icon="1"
        >
          <div
            class="MuiCollapse-container MuiStepContent-transition"
            style="min-height: 0px; height: 0px; transition-duration: 0ms;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiTypography-root ConfirmTrack-spacing-468 MuiTypography-body1"
                >
                  Please enter a track type and track name.
                </p>
                <div
                  class="MuiFormControl-root MuiTextField-root ConfirmTrack-spacing-468 MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    trackName
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input"
                      data-testid="trackNameInput"
                      type="text"
                      value="Test track name"
                    />
                  </div>
                  <p
                    class="MuiFormHelperText-root MuiFormHelperText-filled"
                  >
                    A name for this track
                  </p>
                </div>
                <select
                  data-testid="select"
                >
                  <option
                    value="AlignmentsTrack"
                  >
                    AlignmentsTrack
                  </option>
                  <option
                    value="FilteringTrack"
                  >
                    FilteringTrack
                  </option>
                  <option
                    value="BasicTrack"
                  >
                    BasicTrack
                  </option>
                  <option
                    value="DynamicTrack"
                  >
                    DynamicTrack
                  </option>
                  <option
                    value="SequenceTrack"
                  >
                    SequenceTrack
                  </option>
                  <option
                    value="ReferenceSequenceTrack"
                  >
                    ReferenceSequenceTrack
                  </option>
                  <option
                    value="VariantTrack"
                  >
                    VariantTrack
                  </option>
                  <option
                    value="WiggleTrack"
                  >
                    WiggleTrack
                  </option>
                </select>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                    data-shrink="false"
                  >
                    datasetName
                  </label>
                  <select
                    data-testid="select"
                  >
                    <option
                      value="volvox"
                    >
                      volvox
                    </option>
                  </select>
                  <p
                    class="MuiFormHelperText-root"
                  >
                    Dataset to which the track will be added
                  </p>
                </div>
                <div
                  class="AddTrackDrawerWidget-actionsContainer-233"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root AddTrackDrawerWidget-button-232 MuiButton-text"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Back
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root AddTrackDrawerWidget-button-232 MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
                    data-testid="addTrackNextButton"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Add
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-active"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="12"
              />
              <text
                class="MuiStepIcon-text"
                text-anchor="middle"
                x="12"
                y="16"
              >
                2
              </text>
            </svg>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
            >
              Confirm track type
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root MuiStepContent-last"
          icon="2"
        >
          <div
            class="MuiCollapse-container MuiStepContent-transition"
            style="min-height: 0px; height: 0px; transition-duration: 0ms;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiTypography-root ConfirmTrack-spacing-468 MuiTypography-body1"
                >
                  Please enter a track type and track name.
                </p>
                <div
                  class="MuiFormControl-root MuiTextField-root ConfirmTrack-spacing-468 MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                    data-shrink="true"
                  >
                    trackName
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input"
                      data-testid="trackNameInput"
                      type="text"
                      value="Test track name"
                    />
                  </div>
                  <p
                    class="MuiFormHelperText-root MuiFormHelperText-filled"
                  >
                    A name for this track
                  </p>
                </div>
                <select
                  data-testid="select"
                >
                  <option
                    value="AlignmentsTrack"
                  >
                    AlignmentsTrack
                  </option>
                  <option
                    value="FilteringTrack"
                  >
                    FilteringTrack
                  </option>
                  <option
                    value="BasicTrack"
                  >
                    BasicTrack
                  </option>
                  <option
                    value="DynamicTrack"
                  >
                    DynamicTrack
                  </option>
                  <option
                    value="SequenceTrack"
                  >
                    SequenceTrack
                  </option>
                  <option
                    value="ReferenceSequenceTrack"
                  >
                    ReferenceSequenceTrack
                  </option>
                  <option
                    value="VariantTrack"
                  >
                    VariantTrack
                  </option>
                  <option
                    value="WiggleTrack"
                  >
                    WiggleTrack
                  </option>
                </select>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                    data-shrink="false"
                  >
                    datasetName
                  </label>
                  <select
                    data-testid="select"
                  >
                    <option
                      value="volvox"
                    >
                      volvox
                    </option>
                  </select>
                  <p
                    class="MuiFormHelperText-root"
                  >
                    Dataset to which the track will be added
                  </p>
                </div>
                <div
                  class="AddTrackDrawerWidget-actionsContainer-233"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root AddTrackDrawerWidget-button-232 MuiButton-text"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Back
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root AddTrackDrawerWidget-button-232 MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
                    data-testid="addTrackNextButton"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Add
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AddTrackDrawerWidget /> renders 1`] = `
<div
  class="AddTrackDrawerWidget-root-1"
>
  <div
    class="MuiPaper-root MuiPaper-elevation0 MuiStepper-root MuiStepper-vertical AddTrackDrawerWidget-stepper-2"
  >
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              1
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
          >
            Enter track data
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="1"
      >
        <div
          class="MuiCollapse-container MuiStepContent-transition MuiCollapse-entered"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                class="TrackSourceSelect-root-105"
              >
                <fieldset
                  class="MuiFormControl-root"
                >
                  <div
                    aria-label="Data location"
                    class="MuiFormGroup-root"
                    role="radiogroup"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-124 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-125 Mui-checked MuiIconButton-colorSecondary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <div
                            class="PrivateRadioButtonIcon-root-140 PrivateRadioButtonIcon-checked-142"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              role="presentation"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-141"
                              focusable="false"
                              role="presentation"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </div>
                          <input
                            checked=""
                            class="PrivateSwitchBase-input-127"
                            data-testid="addTrackFromFileRadio"
                            type="radio"
                            value="fromFile"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      >
                        From file
                      </span>
                    </label>
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-124 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <div
                            class="PrivateRadioButtonIcon-root-140"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              role="presentation"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-141"
                              focusable="false"
                              role="presentation"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </div>
                          <input
                            class="PrivateSwitchBase-input-127"
                            data-testid="addTrackFromConfigRadio"
                            type="radio"
                            value="fromConfig"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      >
                        From configuration
                      </span>
                    </label>
                  </div>
                </fieldset>
                <div
                  class="MuiPaper-root MuiPaper-elevation1 TrackSourceSelect-paper-106 MuiPaper-rounded"
                >
                  <fieldset
                    class="MuiFormControl-root"
                  >
                    <div
                      class="MuiFormGroup-root"
                      role="radiogroup"
                    >
                      <label
                        class="MuiFormControlLabel-root"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-124 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-125 Mui-checked MuiIconButton-colorSecondary"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <div
                              class="PrivateRadioButtonIcon-root-140 PrivateRadioButtonIcon-checked-142"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                />
                              </svg>
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-141"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                />
                              </svg>
                            </div>
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-127"
                              type="radio"
                              value="uri"
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </span>
                        <span
                          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                        >
                          URL
                        </span>
                      </label>
                      <label
                        class="MuiFormControlLabel-root Mui-disabled"
                      >
                        <span
                          aria-disabled="true"
                          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-124 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-disabled-126 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                          tabindex="-1"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <div
                              class="PrivateRadioButtonIcon-root-140"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                />
                              </svg>
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-141"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                />
                              </svg>
                            </div>
                            <input
                              class="PrivateSwitchBase-input-127"
                              disabled=""
                              type="radio"
                              value="localPath"
                            />
                          </span>
                        </span>
                        <span
                          class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
                        >
                          Local File
                        </span>
                      </label>
                    </div>
                  </fieldset>
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                      data-shrink="false"
                    >
                      fileLocation
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiInput-input"
                        type="text"
                        value=""
                      />
                    </div>
                    
                  </div>
                </div>
              </div>
              <div
                class="AddTrackDrawerWidget-actionsContainer-4"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root AddTrackDrawerWidget-button-3 MuiButton-text Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="MuiButtonBase-root MuiButton-root AddTrackDrawerWidget-button-3 MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
                  data-testid="addTrackNextButton"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    Next
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              2
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            Confirm track type
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root MuiStepContent-last"
        disabled=""
        icon="2"
      />
    </div>
  </div>
</div>
`;
